fixed input jump5

--- a/src/components/UI/FormInput/FormInput.module.css
+++ b/src/components/UI/FormInput/FormInput.module.css
@@ -3,6 +3,7 @@
     padding: 5px;
     box-sizing: border-box;
     display: block;
+    margin-bottom: 20px;
 }
 
 .Label {
@@ -18,6 +19,7 @@
     font: inherit;
     padding: 6px 10px;
     display: block;
+    float: left;
     width: 100%;
     box-sizing: border-box;
     font-size: 16px;
